--- a/online_retail_ii.ipynb
+++ b/online_retail_ii.ipynb
@@ -4052,19 +4052,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Cluster 0 (Blue): \"Retain\"\n",
+    "*1. Cluster 0 (Blue): \"Retain\"*\n",
     "* Rationale: This cluster represents high-value customers who purchase regularly, though not always very recently. The focus should be on retention efforts to maintain their loyalty and spending levels.\n",
     "* Action: Implement loyalty programs, personalized offers, and regular engagement to ensure they remain active.\n",
     "\n",
-    "2. Cluster 1 (Orange): \"Re-Engage\"\n",
+    "*2. Cluster 1 (Orange): \"Re-Engage\"*\n",
     "* Rationale: This group includes lower-value, infrequent buyers who haven’t purchased recently. The focus should be on re-engagement to bring them back into active purchasing behavior.\n",
     "* Action: Use targeted marketing campaigns, special discounts, or reminders to encourage them to return and purchase again.\n",
     "\n",
-    "3. Cluster 2 (Green): \"Nurture\"\n",
+    "*3. Cluster 2 (Green): \"Nurture\"*\n",
     "* Rationale: This cluster represents the least active and lowest-value customers, but they have made recent purchases. These customers may be new or need nurturing to increase their engagement and spending.\n",
     "* Action: Focus on building relationships, providing excellent customer service, and offering incentives to encourage more frequent purchases.\n",
     "\n",
-    "4. Cluster 3 (Red): \"Reward\"\n",
+    "*4. Cluster 3 (Red): \"Reward\"*\n",
     "* Rationale: This cluster includes high-value, very frequent buyers, many of whom are still actively purchasing. They are your most loyal customers, and rewarding their loyalty is key to maintaining their engagement.\n",
     "* Action: Implement a robust loyalty program, provide exclusive offers, and recognize their loyalty to keep them engaged and satisfied.\n",
     "\n",
